pid/log/build_2024-02-05_00-05-52/controller/stdout_stderr.log
running egg_info
creating ../../build/controller/controller.egg-info
writing ../../build/controller/controller.egg-info/PKG-INFO
writing dependency_links to ../../build/controller/controller.egg-info/dependency_links.txt
writing entry points to ../../build/controller/controller.egg-info/entry_points.txt
writing requirements to ../../build/controller/controller.egg-info/requires.txt
writing top-level names to ../../build/controller/controller.egg-info/top_level.txt
writing manifest file '../../build/controller/controller.egg-info/SOURCES.txt'
reading manifest file '../../build/controller/controller.egg-info/SOURCES.txt'
writing manifest file '../../build/controller/controller.egg-info/SOURCES.txt'
running build
running build_py
creating /home/khushant/pid/build/controller/build
creating /home/khushant/pid/build/controller/build/lib
creating /home/khushant/pid/build/controller/build/lib/controller
copying controller/ref.py -> /home/khushant/pid/build/controller/build/lib/controller
copying controller/system.py -> /home/khushant/pid/build/controller/build/lib/controller
copying controller/pid.py -> /home/khushant/pid/build/controller/build/lib/controller
copying controller/__init__.py -> /home/khushant/pid/build/controller/build/lib/controller
running install
running install_lib
creating /home/khushant/pid/install/controller/lib/python3.10/site-packages/controller
copying /home/khushant/pid/build/controller/build/lib/controller/ref.py -> /home/khushant/pid/install/controller/lib/python3.10/site-packages/controller
copying /home/khushant/pid/build/controller/build/lib/controller/system.py -> /home/khushant/pid/install/controller/lib/python3.10/site-packages/controller
copying /home/khushant/pid/build/controller/build/lib/controller/pid.py -> /home/khushant/pid/install/controller/lib/python3.10/site-packages/controller
copying /home/khushant/pid/build/controller/build/lib/controller/__init__.py -> /home/khushant/pid/install/controller/lib/python3.10/site-packages/controller
byte-compiling /home/khushant/pid/install/controller/lib/python3.10/site-packages/controller/ref.py to ref.cpython-310.pyc
byte-compiling /home/khushant/pid/install/controller/lib/python3.10/site-packages/controller/system.py to system.cpython-310.pyc
  File "/home/khushant/pid/install/controller/lib/python3.10/site-packages/controller/system.py", line 48
    )]
    ^
SyntaxError: closing parenthesis ')' does not match opening parenthesis '[' on line 46

byte-compiling /home/khushant/pid/install/controller/lib/python3.10/site-packages/controller/pid.py to pid.cpython-310.pyc
byte-compiling /home/khushant/pid/install/controller/lib/python3.10/site-packages/controller/__init__.py to __init__.cpython-310.pyc
running install_data
creating /home/khushant/pid/install/controller/share/ament_index
creating /home/khushant/pid/install/controller/share/ament_index/resource_index
creating /home/khushant/pid/install/controller/share/ament_index/resource_index/packages
copying resource/controller -> /home/khushant/pid/install/controller/share/ament_index/resource_index/packages
copying package.xml -> /home/khushant/pid/install/controller/share/controller
running install_egg_info
Copying ../../build/controller/controller.egg-info to /home/khushant/pid/install/controller/lib/python3.10/site-packages/controller-0.0.0-py3.10.egg-info
running install_scripts
Installing pid script to /home/khushant/pid/install/controller/lib/controller
Installing ref script to /home/khushant/pid/install/controller/lib/controller
Installing system script to /home/khushant/pid/install/controller/lib/controller
writing list of installed files to '/home/khushant/pid/build/controller/install.log'
